# new1

./: CMakeLists.txt  LICENSE  README.md  VALIDATION.md  bc2.comp  bc3.comp  bc6h.comp  bc_emulate.c  bc_emulate.h  build.yml  build_and_package.sh
assets/shaders/: basis_to_bc7.comp  bc1.comp  bc4.comp  bc5.comp  bc7.comp
etc/exynosx940/: perf.conf
profiles/winlator/: default.conf
tests/: README.txt
